--- a/templates/partials/examination.html
+++ b/templates/partials/examination.html
@@ -20,7 +20,7 @@
                 </ul>
                 <ul class="nav navbar-nav">
                     <li>
-                        <a ng-click="model = null" ui-sref="patient.examinations">{% trans 'All consultations' %}</a>
+                        <a ng-click="model = null" href="" ui-sref="patient.examinations">{% trans 'All consultations' %}</a>
                     </li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
